# SHBrowser

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Readme.md
src/: SHBrowserWindow.cpp  SHBrowserWindow.h  main.cpp
